--- a/home-2.html
+++ b/home-2.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Riddle - Portfolio Template">
 	<meta name="keywords" content="portfolio, riddle, onepage, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Favicon -->   
+	<!-- Favicon -->
 	<link href="img/favicon.ico" rel="shortcut icon"/>
 
 	<!-- Google Fonts -->
@@ -30,7 +30,7 @@
 	<div id="preloder">
 		<div class="loader"></div>
 	</div>
-	
+
 	<!-- header section start -->
 	<header class="header-section">
 		<div class="container-fluid">
@@ -61,13 +61,13 @@
 	<!-- portfolio section start -->
 	<section class="portfolio-section pt100">
 		<div class="container">
-			
-		</div>                       
+
+		</div>
 		<div class="container-fluid p-0">
 			<div class="row portfolios-area">
 				<div class="col-lg-6">
 					<div class="portfolio-intro">
-						<h2 class="section-title mb-5">I’m a freelance <span>digital designer</span>, with +10 years of experience</h2>
+						<h2 class="section-title mb-5"> TEST I’m a freelance <span>digital designer</span>, with +10 years of experience</h2>
 						<ul class="portfolio-filter controls">
 							<li class="control" data-filter="all">All</li>
 							<li class="control" data-filter=".web">Web design</li>
@@ -81,7 +81,7 @@
 					<a href="img/portfolio/1.jpg" class="portfolio-item set-bg " data-setbg="img/portfolio/1.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>			
+						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>Brand Campaign</h2>
@@ -92,7 +92,7 @@
 					<a href="img/portfolio/2.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/2.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>Brand Identity for Company</h2>
@@ -103,7 +103,7 @@
 					<a href="img/portfolio/3.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/3.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>Brand Campaign</h2>
@@ -114,7 +114,7 @@
 					<a href="img/portfolio/4.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/4.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>Brand Campaign</h2>
@@ -125,7 +125,7 @@
 					<a href="img/portfolio/5.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/5.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>A cup of tea please</h2>
@@ -136,7 +136,7 @@
 					<a href="img/portfolio/6.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/6.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>Brand Campaign</h2>
@@ -147,7 +147,7 @@
 					<a href="img/portfolio/9.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/9.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>Brand Identity for Company</h2>
@@ -158,7 +158,7 @@
 					<a href="img/portfolio/10.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/10.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>Brand Campaign</h2>
@@ -169,7 +169,7 @@
 					<a href="img/portfolio/7.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/7.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>A cup of tea please</h2>
@@ -180,7 +180,7 @@
 					<a href="img/portfolio/8.jpg" class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/8.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 					<div class="portfolio-meta">
 						<h2>Brand Campaign</h2>
