--- a/home-2.html
+++ b/home-2.html
@@ -67,7 +67,8 @@
 			<div class="row portfolios-area">
 				<div class="col-lg-6">
 					<div class="portfolio-intro">
-						<h2 class="section-title mb-5"> TEST I’m a freelance <span>digital designer</span>, with +10 years of experience</h2>
+						<h2 class="section-title mb-5"> TEST
+              I’m a freelance <span>digital designer</span>, with +10 years of experience</h2>
 						<ul class="portfolio-filter controls">
 							<li class="control" data-filter="all">All</li>
 							<li class="control" data-filter=".web">Web design</li>
