--- a/home.html
+++ b/home.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Riddle - Portfolio Template</title>
+	<title>Zachariah Albers - Portfolio</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Riddle - Portfolio Template">
 	<meta name="keywords" content="portfolio, riddle, onepage, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Favicon -->   
+	<!-- Favicon -->
 	<link href="img/favicon.ico" rel="shortcut icon"/>
 
 	<!-- Google Fonts -->
@@ -82,63 +82,63 @@
 				<li class="control" data-filter=".rened">3D Renedering</li>
 				<li class="control" data-filter=".brand">Brand Identity</li>
 			</ul>
-		</div>                       
+		</div>
 		<div class="container-fluid p-md-0 ">
 			<div class="row portfolios-area">
 				<div class="mix col-lg-6 col-md-6 web">
 					<a href="img/portfolio/1.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/1.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 				</div>
 				<div class="mix col-lg-6 col-md-6 digital">
 					<a href="img/portfolio/2.jpg" class="portfolio-item set-bg " data-setbg="img/portfolio/2.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 				</div>
 				<div class="mix col-lg-4 col-md-6 web">
 					<a href="img/portfolio/3.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/3.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 				</div>
 				<div class="mix col-lg-4 col-md-6 digital">
 					<a href="img/portfolio/4.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/4.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 				</div>
 				<div class="mix col-lg-4 col-md-6 rened">
 					<a href="img/portfolio/5.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/5.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 				</div>
 				<div class="mix col-lg-12 col-md-6 brand">
 					<a href="img/portfolio/6.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/6.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 				</div>
 				<div class="mix col-lg-6 col-md-6 rened">
 					<a href="img/portfolio/7.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/7.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 				</div>
 				<div class="mix col-lg-6 col-md-6 brand">
 					<a href="img/portfolio/8.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/8.jpg">
 						<div class="pi-inner">
 							<h2>+ See Project</h2>
-						</div>						
+						</div>
 					</a>
 				</div>
 			</div>
