--- a/home-2.html
+++ b/home-2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Riddle - Portfolio Template</title>
+	<title>Zachariah Albers - Portfolio</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Riddle - Portfolio Template">
+	<meta name="description" content="Zachariah Albers - Portfolio">
 	<meta name="keywords" content="portfolio, riddle, onepage, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
