--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Zachariah Albers - Portfolio</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Riddle - Portfolio Template">
+	<meta name="description" content="Zachariah Albers - Portfolio">
 	<meta name="keywords" content="portfolio, riddle, onepage, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
