--- a/index.html
+++ b/index.html
@@ -1,179 +1,147 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
-<head>
-	<title>Zachariah Albers - Portfolio</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="Zachariah Albers - Portfolio">
-	<meta name="keywords" content="portfolio, riddle, onepage, creative, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Favicon -->
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i,700" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="extraCss.css" type="text/css">
 
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/magnific-popup.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
-
-
-	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-
-</head>
-<body>
-	<!-- Page Preloder -->
-	<div id="preloder">
-		<div class="loader"></div>
-	</div>
-
-	<!-- header section start -->
-	<header class="header-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4 col-md-3">
-					<div class="logo">
-						<h2 class="site-logo">Riddle</h2>
-					</div>
-				</div>
-				<div class="col-lg-8 col-md-9">
-					<a href="" class="site-btn header-btn">Get in touch</a>
-					<nav class="main-menu">
-						<ul>
-							<li><a href="home.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="home-2.html">Work</a></li>
-							<li><a href="contact.html">Contact</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</div>
-		<div class="nav-switch">
-			<i class="fa fa-bars"></i>
-		</div>
-	</header>
-	<!-- header section end -->
-
-	<!-- intro section start -->
-	<section class="intro-section">
-		<div class="container text-center">
-			<div class="row">
-				<div class="col-xl-10 offset-xl-1">
-					<h2 class="section-title">I’m a freelance <span>digital designer</span>, with +10 years of experience</h2>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- intro section end -->
-
-
-	<!-- portfolio section start -->
-	<section class="portfolio-section">
-		<div class="container">
-			<ul class="portfolio-filter controls">
-				<li class="control" data-filter="all">All</li>
-				<li class="control" data-filter=".web">Web design</li>
-				<li class="control" data-filter=".digital">Digital design</li>
-				<li class="control" data-filter=".rened">3D Renedering</li>
-				<li class="control" data-filter=".brand">Brand Identity</li>
-			</ul>
-		</div>
-		<div class="container-fluid p-md-0 ">
-			<div class="row portfolios-area">
-				<div class="mix col-lg-6 col-md-6 web">
-					<a href="img/portfolio/1.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/1.jpg">
-						<div class="pi-inner">
-							<h2>+ See Project</h2>
-						</div>
-					</a>
-				</div>
-				<div class="mix col-lg-6 col-md-6 digital">
-					<a href="img/portfolio/2.jpg" class="portfolio-item set-bg " data-setbg="img/portfolio/2.jpg">
-						<div class="pi-inner">
-							<h2>+ See Project</h2>
-						</div>
-					</a>
-				</div>
-				<div class="mix col-lg-4 col-md-6 web">
-					<a href="img/portfolio/3.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/3.jpg">
-						<div class="pi-inner">
-							<h2>+ See Project</h2>
-						</div>
-					</a>
-				</div>
-				<div class="mix col-lg-4 col-md-6 digital">
-					<a href="img/portfolio/4.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/4.jpg">
-						<div class="pi-inner">
-							<h2>+ See Project</h2>
-						</div>
-					</a>
-				</div>
-				<div class="mix col-lg-4 col-md-6 rened">
-					<a href="img/portfolio/5.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/5.jpg">
-						<div class="pi-inner">
-							<h2>+ See Project</h2>
-						</div>
-					</a>
-				</div>
-				<div class="mix col-lg-12 col-md-6 brand">
-					<a href="img/portfolio/6.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/6.jpg">
-						<div class="pi-inner">
-							<h2>+ See Project</h2>
-						</div>
-					</a>
-				</div>
-				<div class="mix col-lg-6 col-md-6 rened">
-					<a href="img/portfolio/7.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/7.jpg">
-						<div class="pi-inner">
-							<h2>+ See Project</h2>
-						</div>
-					</a>
-				</div>
-				<div class="mix col-lg-6 col-md-6 brand">
-					<a href="img/portfolio/8.jpg" class="portfolio-item set-bg" data-setbg="img/portfolio/8.jpg">
-						<div class="pi-inner">
-							<h2>+ See Project</h2>
-						</div>
-					</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- portfolio section end -->
-
-
-	<!-- footer section start -->
-	<footer class="footer-section text-center">
-		<div class="container">
-			<h2 class="section-title mb-5">Let’s work together</h2>
-			<a href="" class="site-btn">Get in touch</a>
-			<div class="social-links">
-				<a href=""><span class="fa fa-pinterest"></span></a>
-				<a href=""><span class="fa fa-linkedin"></span></a>
-				<a href=""><span class="fa fa-instagram"></span></a>
-				<a href=""><span class="fa fa-facebook"></span></a>
-				<a href=""><span class="fa fa-twitter"></span></a>
-			</div>
-			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-</div>
-		</div>
-	</footer>
-	<!-- footer section end -->
+    <title>Zachariah Albers - Portfolio</title>
+  </head>
+  <body>
+    <!--
+    Additions to make:
+    - 'See more' appears when you mouse over a project
 
 
 
-	<!--====== Javascripts & Jquery ======-->
-	<script src="js/jquery-2.1.4.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/mixitup.min.js"></script>
-	<script src="js/magnific-popup.min.js"></script>
-	<script src="js/main.js"></script>
-</body>
+    -->
+
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4 text-right">
+            Hello, my name is <span class="display-3 mainTextColor">Zachariah Albers</span></h1>
+
+
+          <div class="row">
+            <div class="col col-sm-8 col-12">
+              <p class="h4 font-weight-light text-left">
+                I am a third-year Commerce and Computer Science student interersted in <span class="secondaryTextColor font-weight-bold">iOS</span> development, <span class="secondaryTextColor font-weight-bold">Front-End Web</span> development, and <span class="secondaryTextColor font-weight-bold">Entrepreneurship</span></p>
+            </div>
+            <div class="col-sm">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid ">
+        <div class="row d-flex justify-content-center">
+          <nav class="d-flex justify-content-center nav">
+            <a class="nav-link disabled h4 border-bottom" id="home-Button"> <span id="currently-Selected-Tab">Home</span></a>
+            <a class="nav-link h4 text-primary" id="projects-Button">Projects</a>
+          </nav>
+          <nav class="d-flex justify-content-center nav">
+            <a class="nav-link h4 text-primary" id="skills">Skills</a>
+            <a class="nav-link h4 text-primary" id="contact">Contact</a>
+          </nav>
+        </div>
+      </div>
+
+
+      <div class="container px-3">
+        <h3 class="border-bottom">Highlighted Projects:</h3>
+      </div>
+
+
+
+    <div class="container mt-4 mb-5">
+      <div class="row parentTag">
+
+        <div class="col-md d-flex justify-content-center align-items-center projectZ">
+          <div class="card shadow-sm" style="width: 18rem;">
+            <img class="card-img-top" src="./imgs/TheNannyShackWebsite.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">The Nanny Shack</h5>
+              <p class="card-text"> A prototype website build for a social enterprise that aims to help parents who are struggling to find affordable and flexible daycare, as well as nannies who are struggling to find secure job employment..</p>
+              <p class="text-muted"> <span class="border rounded">iOS</span> <span class="border rounded"> Web Development</span> </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md d-flex justify-content-center align-items-center projectZ">
+          <div class="card shadow-sm" style="width: 18rem;">
+            <img class="card-img-top" src="./imgs/bulb-s.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Project 2</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. <br>
+                <br>
+                <br>
+                <br>
+                <br>
+              </p>
+              <p class="text-muted"> <span class="border rounded">iOS</span> <span class="border rounded"> Web Development</span> </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md d-flex justify-content-center align-items-center projectZ ios-project">
+          <div class="card shadow-sm" style="width: 18rem;">
+            <img class="card-img-top" src="./imgs/bulb-s.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Project 3</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="text-muted"> <span class="border rounded">iOS</span> <span class="border rounded"> Web Development</span> </p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container px-3">
+      <h3 class="border-bottom">About Me:</h3>
+
+    </div>
+
+    <div class="container my-5 px-3">
+      <h3 class="border-bottom">Highlighted Projects:</h3>
+    </div>
+
+    <div class="container-fluid my-5 py-5">
+      <h3 class="border-bottom">Highlighted Projects:</h3>
+    </div>
+
+    <div class="container-fluid my-5 py-5">
+      <h3 class="border-bottom">Highlighted Projects:</h3>
+    </div>
+
+    <div class="container-fluid my-5 py-5">
+      <h3 class="border-bottom">Highlighted Projects:</h3>
+    </div>
+
+
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <!-- Other Scripts  -->
+    <script type="text/javascript" src="indexFile.js">
+
+    </script>
+
+    <script type="text/javascript" src="screenPosition.js">
+
+    </script>
+
+
+  </body>
 </html>
