--- a/about.html
+++ b/about.html
@@ -1,136 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-	<title>Riddle - Portfolio Template</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="Riddle - Portfolio Template">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Favicon -->
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i,700" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
+    <title>Zachariah Albers - Portfolio</title>
+  </head>
+  <body>
 
 
-	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
+    <div class="container-fluid">
+      <nav class="nav">
+        <a class="nav-link" href="./index.html">Home</a>
+        <a class="nav-link disabled" href="">About</a>
+        <a class="nav-link" href="#">Work</a>
+        <a class="nav-link" href="#">Skill</a>
+      </nav>
+      <h1>Hello</h1>
+
+      <h3>
+      Fancy display heading
+      <small class="text-dark">With faded secondary text</small>
+    </h3>
+    </div>
 
 
-</head>
-<body>
-	<!-- Page Preloder -->
-	<div id="preloder">
-		<div class="loader"></div>
-	</div>
-
-	<!-- header section start -->
-	<header class="header-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4 col-md-3">
-					<div class="logo">
-						<h2 class="site-logo">Riddle</h2>
-					</div>
-				</div>
-				<div class="col-lg-8 col-md-9">
-					<a href="" class="site-btn header-btn">Get in touch</a>
-					<nav class="main-menu">
-						<ul>
-							<li><a href="home.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="home-2.html">Work</a></li>
-							<li><a href="contact.html">Contact</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</div>
-		<div class="nav-switch">
-			<i class="fa fa-bars"></i>
-		</div>
-	</header>
-	<!-- header section end -->
-
-	<!-- intro section start -->
-	<section class="intro-section">
-		<div class="container text-center">
-			<div class="row">
-				<div class="col-xl-10 offset-xl-1">
-					<h2 class="section-title">I’m a freelance <span>digital designer</span>, with +10 years of experience</h2>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- intro section end -->
 
 
-	<!-- page section start -->
-	<section class="page-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet pharetra nisl. Vestibulum sollicitudin leo non purus vestibulum placerat. Curabitur ac erat sollicitudin, blandit quam vitae, rutrum diam. Aenean non gravida velit, eu consectetur neque. Nullam in volutpat massa. Duis scelerisque urna non lectus fringilla suscipit. Phasellus lacinia facilisis massa, pellentesque consectetur nunc. Nullam elit metus, condimentum nec libero quis, dapibus malesuada enim. Morbi semper condimentum pellentesque. </p>
-					<div class="row mt-5">
-						<div class="col-md-4">
-							<div class="milestone">
-								<h2>56<span>Clients</span></h2>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="milestone">
-								<h2>112<span>Projects</span></h2>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="milestone">
-								<h2>25<span>Collabs</span></h2>
-							</div>
-						</div>
-					</div>
-					<figure class="mt-5">
-						<img src="img/sign.png" alt="">
-					</figure>
-				</div>
-				<div class="col-lg-5 offset-lg-1">
-					<figure class="pic-frame">
-						<img src="img/about.jpg" alt="">
-					</figure>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- page section end -->
-
-	<!-- footer section start -->
-	<footer class="footer-section text-center">
-		<div class="container">
-			<h2 class="section-title mb-5">Let’s work together</h2>
-			<a href="" class="site-btn">Get in touch</a>
-			<div class="social-links">
-				<a href=""><span class="fa fa-pinterest"></span></a>
-				<a href=""><span class="fa fa-linkedin"></span></a>
-				<a href=""><span class="fa fa-instagram"></span></a>
-				<a href=""><span class="fa fa-facebook"></span></a>
-				<a href=""><span class="fa fa-twitter"></span></a>
-			</div>
-
-		</div>
-	</footer>
-	<!-- footer section end -->
 
 
-	<!--====== Javascripts & Jquery ======-->
-	<script src="js/jquery-2.1.4.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/mixitup.min.js"></script>
-	<script src="js/magnific-popup.min.js"></script>
-	<script src="js/main.js"></script>
-</body>
+
+
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  </body>
 </html>
